plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'tech.bison.trainee'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "org.flywaydb:flyway-core"
    implementation 'org.flywaydb:flyway-sqlserver'
    implementation 'com.microsoft.sqlserver:mssql-jdbc'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
	implementation 'org.jasypt:jasypt:1.9.3'
	implementation 'org.projectlombok:lombok:1.18.30'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.4'
	implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
	implementation('com.github.lookfirst:sardine:5.12') {
    	exclude group: 'org.slf4j', module: 'slf4j-simple'
	}
	implementation 'com.squareup.okhttp3:okhttp:4.11.0'
	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.7.0.202309050840-r'
	implementation files('/libs/jave-1.0.2.jar')
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	
}

tasks.named('test') {
	useJUnitPlatform()
}
